fixed horizontal scrollbar in create project

--- a/frontend/src/app/modules/projects/components/create-project/create-project.component.scss
+++ b/frontend/src/app/modules/projects/components/create-project/create-project.component.scss
@@ -41,6 +41,10 @@
           }
         }
       }
+      .user-chip-list {
+        width: 95%;
+      }
+
       .create-button {
         width: fit-content;
         height: 2.1rem;
@@ -50,7 +54,7 @@
         font-size: 1.3rem;
         line-height: 1.6rem;
         letter-spacing: 0px;
-        color: mat-color($primary,300);
+        color: mat-color($primary, 300);
       }
     }
   }
